plugins {
	id 'org.springframework.boot' version '2.6.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.quoxsii'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.2'
	implementation 'org.flywaydb:flyway-core:8.4.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.2'
	runtimeOnly 'org.postgresql:postgresql:42.3.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.2'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'
	implementation 'org.webjars:webjars-locator-core:0.48'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
}

test {
	useJUnitPlatform()
}
